--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.3",
     "tailwindcss": "^4.1.10",
     "tslib": "^2.3.0"
   },
